Fix url-preview visibility

--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -302,6 +302,7 @@ body {
 
 #url-preview {
 	position: absolute;
+	z-index: 10000;
 	bottom: 0;
 	left: 0;
 	display: block;
@@ -333,7 +334,7 @@ body {
 	border-radius: 5px 0 0 0;
 }
 
-#url-preview.hidden {
+#url-preview.invisible {
 	opacity: 0;
 }
 
